fixed layout issue

--- a/Scratch/css/scientific.sass
+++ b/Scratch/css/scientific.sass
@@ -1181,6 +1181,8 @@ section.slide
   font-family: sans-serif
   font-size: .8em
   min-height: 25em
+  ul,ol
+    padding-left: 1.5ex
 
 a.rss
   background-color: #F8F8F8
